@@ -69,7 +69,7 @@ eval {
 		),
 	);
 };
-is($EVAL_ERROR, "Parameter 'id' must be a natural number.\n",
+is($EVAL_ERROR, "Parameter 'id' must be a positive natural number.\n",
 	"Parameter 'id' must be a natural number.");
 clean();
 
