@@ -1,6 +1,7 @@
 0.05
  - Fix example in doc.
  - Move check_array_object() to Mo::utils::Array.
+ - Rewrite check of id to Mo::utils::Number::check_positive_natural().
  - Update copyright years.
 
 0.04 2024-05-27T19:41:28+02:00
